Updating bio on home page, and added a research paper to biblography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@InProceedings{10.1007/978-3-031-77571-0_65,
+author="{\'O} Fithcheallaigh, Se{\'a}n
+and Cleland, Ian
+and Nugent, Chris
+and Liu, Jun",
+editor="Bravo, Jos{\'e}
+and Nugent, Chris
+and Cleland, Ian",
+title="Towards a Trustworthy Federated Learning Framework for Constrained Devices",
+booktitle="Proceedings of the International Conference on Ubiquitous Computing and Ambient Intelligence (UCAmI 2024)",
+year="2024",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="680--691",
+abstract="Federated learning (FL) is a relatively new approach to machine learning that aims to ensure data privacy is preserved by training models on a distributed network of clients. While FL has shown potential, challenges such as inefficient communication schemes and poor performance with non-independent and identically distributed data pose significant barriers to its wider adoption. This work proposes a framework to overcome some of these challenges by exploring methods to improve communication reliability, improve client selection and investigate pathways to implement robust trust mechanisms. The goal is to develop a trustworthy FL framework with a focus on constrained IoT devices that will be applicable to a range of use cases such as those found in industrial settings, where there is a need to improve efficiency and safety, or detecting fraudulent transactions on mobile devices, helping protect customers. A FL network of this type must be capable of handling devices that produce poor quality data, have an efficient communication scheme, and efficient training processes to preserve battery life, while working efficiently with multi-modal data. This paper will first provide background information on FL, discuss the approach to address some of its challenges, and detail the framework's verification process. Additionally, it will present initial baseline experiments using the Flower framework to develop an understanding of how FL networks are created and implemented, and to assess the impact of varying the number of clients or training rounds on overall accuracy.",
+isbn="978-3-031-77571-0"
+}
+
 @string{aps = {American Physical Society,}}
 
 @book{einstein1920relativity,
