Updating bib to have just my mpaper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,9 @@
 ---
 ---
 
+
+@string{Springer}
+
 @InProceedings{10.1007/978-3-031-77571-0_65,
 author="{\'O} Fithcheallaigh, Se{\'a}n
 and Cleland, Ian
