Updating bib to have just my paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,9 +2,10 @@
 ---
 
 
-@string{Springer}
+@string{aps={Springer Nature,}}
 
 @InProceedings{10.1007/978-3-031-77571-0_65,
+bibtex_show={true},
 author="{\'O} Fithcheallaigh, Se{\'a}n
 and Cleland, Ian
 and Nugent, Chris
