Adding new paper to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,7 +23,23 @@ abstract="Federated learning (FL) is a relatively new approach to machine learni
 isbn="978-3-031-77571-0"
 }
 
-@string{aps = {American Physical Society,}}
+@InProceedings{10.1007/978-3-031-78857-4_13,
+author="Fithcheallaigh, Se{\'a}n {\'O}
+and Cleland, Ian",
+editor="Zheng, Huiru
+and Glass, David
+and Mulvenna, Maurice
+and Liu, Jun
+and Wang, Hui",
+title="An Embedded Machine Learning Approach to Assist Navigation for People with Visual Impairments",
+booktitle="Advances in Computational Intelligence Systems",
+year="2024",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="157--169",
+abstract="An ever-increasing number of people are living with visual impairments. As machine learning techniques evolve alongside improving hardware available on embedded devices, there exists the potential to develop a system which can detect and localise objects in an indoor setting. This system would aim to detect objects and localise them, thereby allowing the user to navigate around these obstacles in an unfamiliar environment. The work presented here show the initial investigations into the development of such a system. The information presented will cover the investigation of a number of machine learning techniques as well as the deployment of a model onto a constrained device.",
+isbn="978-3-031-78857-4"
+}
 
 
 
