updated new paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,7 @@ isbn="978-3-031-77571-0"
 }
 
 @InProceedings{10.1007/978-3-031-78857-4_13,
+bibtex_show={true},
 author="Fithcheallaigh, Se{\'a}n {\'O}
 and Cleland, Ian",
 editor="Zheng, Huiru
